🔼Update: snippets address

--- a/backend/apps/massage/templates/reception/session_detailed.html
+++ b/backend/apps/massage/templates/reception/session_detailed.html
@@ -41,7 +41,7 @@
 <body class="hold-transition layout-top-nav">
 <div class="wrapper">
     <!-- Navbar -->
-    {% include 'snippets/navbar.html' %}
+    {% include 'reception/snippets/navbar.html' %}
     <!-- /.navbar -->
 
     <!-- Content Wrapper. Contains page content -->
@@ -248,8 +248,8 @@
                                                 <thead>
                                                 <tr>
                                                     <th>Сумма</th>
-                                                    <th>Тип</th>
                                                     <th>Дата</th>
+                                                    <th>Тип</th>?
                                                     <th>Автор</th>
                                                 </tr>
                                                 </thead>
