--- a/backend/apps/massage/templates/reception/create_booking_tmp.html
+++ b/backend/apps/massage/templates/reception/create_booking_tmp.html
@@ -29,7 +29,7 @@
 <body class="hold-transition layout-top-nav">
 <div class="wrapper">
     <!-- Navbar -->
-    {% include 'snippets/navbar.html' %}
+    {% include 'reception/snippets/navbar.html' %}
     <!-- /.navbar -->
 
     <div class="content-wrapper">
